# cohere_transcribe_rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  transcribe.sh
.cargo/: config.toml
.github/workflows/: ci.yml  integration-test.yml  release.yml
src/: audio.rs  config.rs  decoder.rs  encoder.rs  inference.rs  lib.rs  main.rs  tokenizer.rs  weights.rs
src/mlx/: array.rs  decoder.rs  encoder.rs  ffi.rs  inference.rs  mod.rs  ops.rs  stream.rs  weights.rs
tests/fixtures/: README.md
tools/: extract_vocab.py
