[package]
name = "cohere_transcribe_rs"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust implementation for the CohereLabs/cohere-transcribe-03-2026 speech-to-text model. Includes a CLI and an OpenAI-compatible API server."
repository = "https://github.com/second-state/cohere_transcribe_rs"
keywords = ["speech-to-text", "transcription", "asr", "mlx", "libtorch"]
categories = ["multimedia::audio", "command-line-utilities"]
exclude = ["mlx-c/", ".github/", "tests/", "models/", "tools/", ".gitmodules"]

[[bin]]
name = "transcribe"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "transcribe-server"
path = "src/bin/server.rs"
required-features = ["server"]

[dependencies]
# libtorch backend (Linux x86_64 / aarch64 with SVE)
tch = { version = "0.20", optional = true }

# Model weight loading (shared by both backends)
safetensors = "0.5.3"

# Audio decoding (pure Rust: WAV, FLAC, MP3, AAC, OGG, ...)
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "wav"] }

# Audio resampling
rubato = "0.16"

# FFT for mel spectrogram computation
rustfft = "6"
num-complex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# CLI argument parsing (optional — only needed for the CLI/server binaries)
clap = { version = "4", features = ["derive"], optional = true }

# API server (optional — only needed for the server binary)
axum = { version = "0.7", features = ["multipart"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tempfile = { version = "3", optional = true }

[features]
# By default only the core library is built (no CLI/server deps).
# Select exactly one backend feature.
default = []
tch-backend = ["dep:tch"]
mlx = []
cli = ["dep:clap", "dep:tracing-subscriber"]
server = ["cli", "dep:axum", "dep:tokio", "dep:tower-http", "dep:tempfile"]

[build-dependencies]
cmake = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
